--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -37,7 +37,7 @@
 			<!-- SideBar Menu -->
 			<ul class="list-unstyled full-box dashboard-sideBar-Menu">
 				<li>
-					<a href="home.html">
+					<a href="/">
 						<i class="zmdi zmdi-view-dashboard zmdi-hc-fw"></i> Página principal
 					</a>
 				</li>
@@ -105,18 +105,15 @@
 					
 				</li>
 				<li>
-					<a href="#!" class="btn-sideBar-SubMenu">
+					<a href="#" class="btn-sideBar-SubMenu">
 						<i class="zmdi zmdi-card zmdi-hc-fw"></i> Registro <i class="zmdi zmdi-caret-down pull-right"></i>
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
-							<a href="admin.html"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Registro Administración</a>
+							<a href="/crear_alumno"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro estudiantes</a>
 						</li>
 						<li>
-							<a href="registroest.html"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro estudiantes</a>
-						</li>
-						<li>
-							<a href="registroprof.html"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro profesor</a>
+							<a href="/crear_profesor"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro profesor</a>
 						</li>
 					</ul>
 				</li>
