Registro profesores terminado

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -72,10 +72,10 @@
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
-							<a href="administración.html"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Administración</a>
+							<a href="/estudiantes"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Estudiantes</a>
 						</li>
 						<li>
-							<a href="profesores.html"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i>Profesores</a>
+							<a href="/profesores"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i>Profesores</a>
 						</li>
 						
 						</ul>
