--- a/src/views/crear_profesor.hbs
+++ b/src/views/crear_profesor.hbs
@@ -3,28 +3,28 @@
 	<div class="page-header">
 		<h1 class="text-titles"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro <small>Profesor</small></h1>
 	</div>
-	<p class="lead">Rellenando este formulario podremos añadir al sistema a un nuevo profesor.Este proceso solo podrá realizarlo el administrador y profesores del centro.</p>
+	<p class="lead">Rellenando el siguiente formulario podremos añadir al sistema un nuevo profesor.Este proceso solo podrá realizarlo el administrador</p>
 </div>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="nav nav-tabs" style="margin-bottom: 15px;">
 				<li class="active"><a href="#new" data-toggle="tab">Nuevo</a></li>
-				<li><a href="#list" data-toggle="tab">Listado de Profesores</a></li>
+				<li><a href="/profesores">Listado de Profesores</a></li>
 			</ul>
 			<div id="myTabContent" class="tab-content">
 				<div class="tab-pane fade active in" id="new">
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
-								<form method="post" action="/crear_profesor">
+								<form method="post">
 									<div class="form-group label-floating">
 										<label class="control-label">Nombre</label>
 										<input class="form-control" name="firstName" type="text">
 									</div>
 									<div class="form-group label-floating">
 										<label class="control-label">Apellidos</label>
-										<input class="form-control" name="lastname"  type="text">
+										<input class="form-control" name="lastName" type="text">
 									</div>
 									<div class="form-group label-floating">
 										<label class="control-label">Codigo profesor</label>
@@ -53,41 +53,17 @@
 									<div class="form-group">
 										<label class="control-label">Tutor</label>
 										<select class="form-control" name="tutor"  >
-											<option>Si</option>
-											<option>No</option>
+											<option value="true">Si</option>
+											<option value="false">No</option>
 										</select>
 									</div>
 									<div class="form-group">
-										<label class="control-label">Etapa</label>
-										<select class="form-control" name="etapa" >
-											<option>E.S.O</option>
-											<option>Bachillerato</option>
-											<option>FP GRADO MEDIO</option>
-											<option>FP GRADO SUPERIOR</option>
+										<label class="control-label">Jefe de departamento</label>
+										<select class="form-control" name="jefe_departamento">
+											<option disabled selected>-----</option>
+											<option value="true">Si</option>
+											<option value="false">No</option>
 										</select>
-									<div class="form-group label-floating">
-										<label class="control-label">Nombre curso:</label>
-										<textarea class="form-control" name="nombre_curso" ></textarea>
-										</div>
-									<div class="form-group">
-										<label class="control-label">Curso</label>
-										<select class="form-control" name="curso" >
-											<option>1º</option>
-											<option>2º</option>
-											<option>3º</option>
-											<option>4º</option>
-										</select>
-									</div>
-									<div class="form-group">
-										<label  class="control-label">Año</label>
-										<select class="form-control" name="year" >
-											<option>2021-2022</option>
-											<option>2022-2023</option>
-											<option>2024-2025</option>
-											<option>2026-2027</option>
-											<option>2027-2028</option>
-										</select>
-									<!--Direccion-->
 									</div>
 										<div class="form-group label-floating">
 										<label class="control-label">calle</label>
@@ -147,6 +123,8 @@
 	</div>
 </div>
 
+<!--SCRIPT PARA LOCALIDAD Y PROVINCIA-->
+
 <script>
 
 	(async () => {
@@ -162,7 +140,7 @@
             })
             province.addEventListener("change", async () => {
                 const currentProvince = province.value;
-                let responseCities = await fetch(`http://localhost:3000/cities/${currentProvince}`);
+                let responseCities = await fetch(`/select_city/${currentProvince}`);
                 currentCities = await responseCities.json();
                 
                 if(!currentCities) return alert('No existe esa provincia!');
@@ -183,4 +161,4 @@
                 })
             })
         })()
-</script>
+</script> 
