Registro de alumnos con asignaturas

--- a/src/views/crear_profesor.hbs
+++ b/src/views/crear_profesor.hbs
@@ -65,6 +65,7 @@
 											<option value="false">No</option>
 										</select>
 									</div>
+									<!--DIRECCION-->
 										<div class="form-group label-floating">
 										<label class="control-label">calle</label>
 										<textarea class="form-control" name="calle" ></textarea>
@@ -101,7 +102,7 @@
 										</select>
 
 									<div class="form-group">
-										<label  class="control-label">Provincia</label>
+										<label  class="control-label">Localidad</label>
 										<select class="form-control" name="city" id="city" >
 											<option selected disabled>---</option>
 										</select>
