--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -43,20 +43,23 @@
 				</li>
 				<li>
 					<a href="#!" class="btn-sideBar-SubMenu">
-						<i class="zmdi zmdi-case zmdi-hc-fw"></i> Administración modulos <i class="zmdi zmdi-caret-down pull-right"></i>
+						<i class="zmdi zmdi-case zmdi-hc-fw"></i> Zona de Administracion <i class="zmdi zmdi-caret-down pull-right"></i>
 					</a>
 					<ul class="list-unstyled full-box">
+						<li>
+							<a href="/ciclos"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Ciclos</a>
+						</li>
+						<li>
+							<a href="/mod_profesores"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de profesores</a>
+						</li>
+						<li>
+							<a href="/mod_estudiantes"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Modificacion de Estudiantes</a>
+						</li>
 						<li>
 							<a href="calendario.html"><i class="zmdi zmdi-timer zmdi-hc-fw"></i>Calendario</a>
 						</li>
 						<li>
 							<a href="Horario.html"><i class="zmdi zmdi-timer zmdi-hc-fw"></i>Horario</a>
-						</li>
-						<li>
-							<a href="unidades.html"><i class="zmdi zmdi-book zmdi-hc-fw"></i>Unidades didacticas</a>
-						</li>
-						<li>
-							<a href="modulos.html"><i class="zmdi zmdi-graduation-cap zmdi-hc-fw"></i>Examenes y pruebas iniciales</a>
 						</li>
 						<li>
 							<a href="FCT.html"><i class="zmdi zmdi-font zmdi-hc-fw"></i>FCT</a>
@@ -72,7 +75,7 @@
 					</a>
 					<ul class="list-unstyled full-box">
 						<li>
-							<a href="/estudiantes"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Estudiantes</a>
+							<a href="/Alumnos"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Estudiantes</a>
 						</li>
 						<li>
 							<a href="/profesores"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i>Profesores</a>
@@ -114,6 +117,12 @@
 						</li>
 						<li>
 							<a href="/crear_profesor"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro profesor</a>
+						</li>
+						<li>
+							<a href="/registrar_empresa"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro empresa</a>
+						</li>
+						<li>
+							<a href="/registrar_FCT"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro FCT</a>
 						</li>
 					</ul>
 				</li>
