Realizando registro de festividades y FCT

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -124,6 +124,9 @@
 						<li>
 							<a href="/registrar_FCT"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro FCT</a>
 						</li>
+						<li>
+							<a href="/registrar_festivo"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registro de Festivos</a>
+						</li>
 					</ul>
 				</li>
 				<li>
