--- a/src/views/registrar_empresa.hbs
+++ b/src/views/registrar_empresa.hbs
@@ -56,6 +56,11 @@
                     <label class="control-label">Representante de certificado digital</label>
                     <input class="form-control" name="representante_certificado_digital" id="representante_certificado_digital" type="text" />
                   </div>
+                  </div>
+                    <div class="form-group label-floating">
+                    <label class="control-label">Persona de contacto</label>
+                    <input class="form-control" name="contacto" id="contacto" type="text" />
+                  </div>
 
                   <!--DIRECCION-->
                   
