--- a/src/views/registrar_FCT.hbs
+++ b/src/views/registrar_FCT.hbs
@@ -19,18 +19,22 @@
             <div class="row">
               <div class="col-xs-12 col-md-10 col-md-offset-1">
                 <form method="post">
-                  <div class="form-group label-floating">
-                    <label class="control-label">Alumno de 2º que realizara la FCT</label>
-                    <input class="form-control" name="alumno" id="alumno" type="text" />
+                   <div class="form-group">
+					      <label class="control-label">Seleccione un Alumno de 2ºFP</label>
+					      <select class="form-control" name="alumno" id="alumno" >
+                          {{#each alumnos as | Alumnos |}}
+                          <option value="{{Alumnos.name}}">{{Alumnos.name}} </option>
+                          {{/each}}
+                     </select>
                   </div>
                   <div class="form-group">
-					<label  class="control-label">Eliga su empresa</label>
-					  <select class="form-control" name="empresa" id="empresa" >
+					      <label  class="control-label">Eliga su empresa</label>
+					      <select class="form-control" name="empresa" id="empresa" >
                           {{#each empresas as | Empresas |}}
                           <option value="{{Empresas.name}}"> {{Empresas.name}} </option>
                           {{/each}}
                      </select>
-                     </div>
+                  </div>
                   <div class="form-group label-floating">
                     <label class="control-label">Tutor laboral en la empresa</label>
                     <input class="form-control" name="tutor_practicas" id="tutor_practicas" type="text" />
