--- a/src/views/registrar_festivo.hbs
+++ b/src/views/registrar_festivo.hbs
@@ -10,7 +10,7 @@
 		<div class="col-xs-12">
 			<ul class="nav nav-tabs" style="margin-bottom: 15px;">
 				<li class="active"><a href="#new" data-toggle="tab">Nuevo</a></li>
-				<li><a href="/profesores">Listado de Profesores</a></li>
+				<li><a href="/festivos">Listado de Festivos</a></li>
 			</ul>
 			<div id="myTabContent" class="tab-content">
 				<div class="tab-pane fade active in" id="new">
@@ -20,15 +20,11 @@
 								<form method="post">
 									<div class="form-group label-floating">
 										<label class="control-label">Nombre</label>
-										<input class="form-control" name="firstName" type="text">
+										<input class="form-control" name="nombre" type="text">
 									</div>
 									<div class="form-group">
 										<label class="control-label">¿ Es una fiesta nacional ?</label>
-										<select class="form-control" name="nacional">
-											<option disabled selected>-----</option>
-											<option value="true">Si</option>
-											<option value="false">No</option>
-										</select>
+										<input name="nacional" id="nacional" type="checkbox" value="true">
 									</div>
                                     <div class="form-group label-floating">
 										<label class="control-label">Dia del festivo</label>
@@ -73,10 +69,19 @@
 <script>
 
 	(async () => {
-
-            const nacional_el = document.querySelector('#nacional')
+			const nacional_el = document.querySelector('#nacional') 
             const province = document.querySelector("#province");
             const city = document.querySelector("#city");
+
+			nacional_el.addEventListener("change", () => {
+  			if(nacional_el.checked === true) {
+    			province.setAttribute('disabled', '');
+  			} else {
+    			province.removeAttribute('disabled');
+  			}
+		})
+				
+
             const responseProvinces = await fetch('/select_province');
             const provinces = await responseProvinces.json();
             provinces.map(p => {
@@ -85,10 +90,6 @@
                 opt.innerText = p.showName;
                 province.appendChild(opt);
             })
-
-
-        
-
             province.addEventListener("change", async () => {
                 const currentProvince = province.value;
                 let responseCities = await fetch(`/select_city/${currentProvince}`);
